@@ -273,7 +273,7 @@ end_define
 
 begin_enum
 enum|enum
-DECL|enum|__anon2c6709290103
+DECL|enum|__anon288ffabe0103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -386,7 +386,7 @@ end_struct
 begin_typedef
 typedef|typedef
 struct|struct
-DECL|struct|__anon2c6709290208
+DECL|struct|__anon288ffabe0208
 block|{
 DECL|member|window
 name|GimpImageWindow
@@ -747,8 +747,10 @@ name|GimpDisplay
 modifier|*
 name|new_display
 parameter_list|,
-name|gboolean
-name|from_switch_page
+specifier|const
+name|gchar
+modifier|*
+name|new_entry_id
 parameter_list|)
 function_decl|;
 end_function_decl
@@ -763,23 +765,6 @@ parameter_list|(
 name|GimpGuiConfig
 modifier|*
 name|config
-parameter_list|)
-function_decl|;
-end_function_decl
-
-begin_function_decl
-specifier|static
-name|void
-name|gimp_image_window_set_entry_id
-parameter_list|(
-name|GimpImageWindow
-modifier|*
-name|window
-parameter_list|,
-specifier|const
-name|gchar
-modifier|*
-name|entry_id
 parameter_list|)
 function_decl|;
 end_function_decl
@@ -1948,15 +1933,6 @@ argument_list|,
 name|G_CONNECT_SWAPPED
 argument_list|)
 expr_stmt|;
-name|private
-operator|->
-name|entry_id
-operator|=
-name|gimp_image_window_config_to_entry_id
-argument_list|(
-name|config
-argument_list|)
-expr_stmt|;
 name|gimp_image_window_session_update
 argument_list|(
 name|window
@@ -1964,8 +1940,10 @@ argument_list|,
 name|NULL
 comment|/*new_display*/
 argument_list|,
-name|FALSE
-comment|/*from_switch_page*/
+name|gimp_image_window_config_to_entry_id
+argument_list|(
+name|config
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -6049,9 +6027,12 @@ operator|==
 literal|0
 condition|)
 block|{
-name|gimp_image_window_set_entry_id
+name|gimp_image_window_session_update
 argument_list|(
 name|window
+argument_list|,
+name|NULL
+comment|/*new_display*/
 argument_list|,
 name|gimp_image_window_config_to_entry_id
 argument_list|(
@@ -6481,8 +6462,8 @@ name|window
 argument_list|,
 name|active_display
 argument_list|,
-name|TRUE
-comment|/*from_switch_page*/
+name|NULL
+comment|/*new_entry_id*/
 argument_list|)
 expr_stmt|;
 name|gimp_ui_manager_update
@@ -6711,8 +6692,8 @@ name|window
 argument_list|,
 name|display
 argument_list|,
-name|FALSE
-comment|/*from_switch_page*/
+name|NULL
+comment|/*new_entry_id*/
 argument_list|)
 expr_stmt|;
 name|view
@@ -6965,7 +6946,7 @@ end_function
 begin_function
 specifier|static
 name|void
-DECL|function|gimp_image_window_session_update (GimpImageWindow * window,GimpDisplay * new_display,gboolean from_switch_page)
+DECL|function|gimp_image_window_session_update (GimpImageWindow * window,GimpDisplay * new_display,const gchar * new_entry_id)
 name|gimp_image_window_session_update
 parameter_list|(
 name|GimpImageWindow
@@ -6976,8 +6957,10 @@ name|GimpDisplay
 modifier|*
 name|new_display
 parameter_list|,
-name|gboolean
-name|from_switch_page
+specifier|const
+name|gchar
+modifier|*
+name|new_entry_id
 parameter_list|)
 block|{
 name|GimpImageWindowPrivate
@@ -6989,17 +6972,152 @@ argument_list|(
 name|window
 argument_list|)
 decl_stmt|;
+comment|/* Handle changes to the entry id */
+if|if
+condition|(
+name|new_entry_id
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|private
+operator|->
+name|entry_id
+condition|)
+block|{
+comment|/* We're initializing. If we're in single-window mode, this            * will be the only window, so start to session manage            * it. If we're in multi-window mode, we will find out if we            * should session manage ourselves when we get a display            */
+if|if
+condition|(
+name|strcmp
+argument_list|(
+name|new_entry_id
+argument_list|,
+name|GIMP_SINGLE_IMAGE_WINDOW_ENTRY_ID
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+name|gimp_image_window_session_apply
+argument_list|(
+name|window
+argument_list|,
+name|new_entry_id
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|strcmp
+argument_list|(
+name|private
+operator|->
+name|entry_id
+argument_list|,
+name|new_entry_id
+argument_list|)
+operator|!=
+literal|0
+condition|)
+block|{
+comment|/* The entry id changed, immediately and always stop session            * managing the old entry            */
+name|gimp_image_window_session_clear
+argument_list|(
+name|window
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|strcmp
+argument_list|(
+name|new_entry_id
+argument_list|,
+name|GIMP_EMPTY_IMAGE_WINDOW_ENTRY_ID
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+comment|/* If there is only one imageless display, we shall                * become the empty image window                */
 if|if
 condition|(
 name|private
 operator|->
-name|entry_id
-operator|==
-name|NULL
+name|active_shell
+operator|&&
+name|private
+operator|->
+name|active_shell
+operator|->
+name|display
+operator|&&
+operator|!
+name|gimp_display_get_image
+argument_list|(
+name|private
+operator|->
+name|active_shell
+operator|->
+name|display
+argument_list|)
+operator|&&
+name|g_list_length
+argument_list|(
+name|private
+operator|->
+name|shells
+argument_list|)
+operator|<=
+literal|1
 condition|)
-return|return;
+block|{
+name|gimp_image_window_session_apply
+argument_list|(
+name|window
+argument_list|,
+name|new_entry_id
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
 if|if
 condition|(
+name|strcmp
+argument_list|(
+name|new_entry_id
+argument_list|,
+name|GIMP_SINGLE_IMAGE_WINDOW_ENTRY_ID
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+comment|/* As soon as we become the single image window, we                * shall session manage ourself until single-window mode                * is exited                */
+name|gimp_image_window_session_apply
+argument_list|(
+name|window
+argument_list|,
+name|new_entry_id
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|private
+operator|->
+name|entry_id
+operator|=
+name|new_entry_id
+expr_stmt|;
+block|}
+comment|/* Handle changes to the displays. When in single-window mode, we    * just keep session managing the single image window. We only need    * to care about the multi-window mode case here    */
+if|if
+condition|(
+name|new_display
+operator|&&
 name|strcmp
 argument_list|(
 name|private
@@ -7014,8 +7132,6 @@ condition|)
 block|{
 if|if
 condition|(
-name|new_display
-operator|&&
 name|gimp_display_get_image
 argument_list|(
 name|new_display
@@ -7032,8 +7148,6 @@ block|}
 elseif|else
 if|if
 condition|(
-name|new_display
-operator|&&
 operator|!
 name|gimp_display_get_image
 argument_list|(
@@ -7062,43 +7176,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-elseif|else
-if|if
-condition|(
-name|strcmp
-argument_list|(
-name|private
-operator|->
-name|entry_id
-argument_list|,
-name|GIMP_SINGLE_IMAGE_WINDOW_ENTRY_ID
-argument_list|)
-operator|==
-literal|0
-condition|)
-block|{
-comment|/* Always session manage the single image window, but not if all        * we did was switch tabs        */
-if|if
-condition|(
-operator|!
-name|from_switch_page
-condition|)
-name|gimp_image_window_session_apply
-argument_list|(
-name|window
-argument_list|,
-name|private
-operator|->
-name|entry_id
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|g_assert_not_reached
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 end_function
 
@@ -7126,91 +7203,6 @@ else|:
 name|GIMP_EMPTY_IMAGE_WINDOW_ENTRY_ID
 operator|)
 return|;
-block|}
-end_function
-
-begin_function
-specifier|static
-name|void
-DECL|function|gimp_image_window_set_entry_id (GimpImageWindow * window,const gchar * entry_id)
-name|gimp_image_window_set_entry_id
-parameter_list|(
-name|GimpImageWindow
-modifier|*
-name|window
-parameter_list|,
-specifier|const
-name|gchar
-modifier|*
-name|entry_id
-parameter_list|)
-block|{
-name|GimpImageWindowPrivate
-modifier|*
-name|private
-init|=
-name|GIMP_IMAGE_WINDOW_GET_PRIVATE
-argument_list|(
-name|window
-argument_list|)
-decl_stmt|;
-name|g_return_if_fail
-argument_list|(
-name|entry_id
-operator|!=
-name|NULL
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|(
-name|private
-operator|->
-name|entry_id
-operator|&&
-name|strcmp
-argument_list|(
-name|private
-operator|->
-name|entry_id
-argument_list|,
-name|entry_id
-argument_list|)
-operator|==
-literal|0
-operator|)
-operator|||
-operator|!
-name|private
-operator|->
-name|active_shell
-condition|)
-return|return;
-name|gimp_image_window_session_clear
-argument_list|(
-name|window
-argument_list|)
-expr_stmt|;
-name|private
-operator|->
-name|entry_id
-operator|=
-name|entry_id
-expr_stmt|;
-name|gimp_image_window_session_update
-argument_list|(
-name|window
-argument_list|,
-name|private
-operator|->
-name|active_shell
-operator|->
-name|display
-argument_list|,
-name|FALSE
-comment|/*from_switch_page*/
-argument_list|)
-expr_stmt|;
 block|}
 end_function
 
